--- a/api/src/Infrastructure/Infrastructure.Messaging/Infrastructure.Messaging.csproj
+++ b/api/src/Infrastructure/Infrastructure.Messaging/Infrastructure.Messaging.csproj
@@ -4,10 +4,12 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AssemblyName>$(CompanyArtifact).$(MSBuildProjectName)</AssemblyName>
+    <RootNamespace>$(CompanyArtifact).$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.0-rc.1.24431.7" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.0" />
     <PackageReference Include="MQTTnet" Version="5.0.0.1214-RC" />
   </ItemGroup>
 
