--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,8 @@
     "@iconify-json/material-symbols": "^1.2.2",
     "@unocss/eslint-config": "^0.63.2",
     "@unocss/nuxt": "^0.63.2",
+    "@vueuse/core": "^11.2.0",
+    "@vueuse/nuxt": "^11.2.0",
     "typescript": "^5.6.2",
     "unocss": "^0.63.2"
   },
