--- a/api/src/WebAPI/appsettings.json
+++ b/api/src/WebAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=data.db",
-    "MqttDefaultConnection": "mqtt://localhost:1883"
+    "DefaultConnection": "Data Source=data/data.db",
+    "MqttDefaultConnection": "mqtt://nanomq:1883"
   }
 }
