--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,10 @@ services:
       context: ./api
     ports:
       - 8080:8080
+    volumes:
+      - db:/app/data
+    depends_on:
+      - nanomq
     networks:
       - mq
 
@@ -27,6 +31,9 @@ services:
       # - 8883:8883
     networks:
       - mq
+
+volumes:
+  db:
 
 networks:
   mq:
