feat(cd): configure traefik reverse proxy

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,8 @@
-{}
+{
+  "yaml.schemas": {
+    "https://json.schemastore.org/traefik-v3.json": [
+      "traefik.yml",
+      "traefik.yaml",
+    ],
+  },
+}
