--- a/api/src/WebAPI/appsettings.Development.json
+++ b/api/src/WebAPI/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "MqttDefaultConnection": "mqtt://localhost:1883"
   }
 }
