--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 default:
-  image: docker:27.3.1-alpine3.20
+  image: docker:27.4.0
   services:
-    - docker:27.3.1-alpine3.20-dind
+    - docker:27.4.0-dind
   before_script:
     - docker info
     - apk add --no-cache curl jq python3 py3-pip
