--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "radix-vue": "^1.9.6",
     "vue": "latest",
     "vue-router": "latest",
+    "vue-sonner": "^1.3.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
