--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,8 +58,8 @@ deploy:
   only:
     - main
   before_script:
-    # - "which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )"
-    - "apt-get update -y && apt-get install openssh-client -y"
+    - "apk update"
+    - "apk add --no-cache openssh-client"
     
     - mkdir -v -m 700 -p ~/.ssh
     - echo "$SSH_PRIVATE_KEY" | tr -d '\r' > ~/.ssh/id_rsa
